--- a/app.json
+++ b/app.json
@@ -20,10 +20,12 @@
       "supportsTablet": true
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": ["LOCATION"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
