--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-font": "^10.0.5",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-location": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
