--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-av": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
