--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/slider": "^4.2.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-app-loading": "~1.3.0",
-    "expo-font": "^10.0.5",
+    "expo-av": "~10.2.0",
+    "expo-font": "~10.0.4",
     "expo-location": "~14.0.1",
     "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -30,9 +32,10 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.8",
+    "recyclerlistview": "^3.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "expo-av": "~10.2.0"
+    "rn-vertical-slider": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
