--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "recyclerlistview": "^3.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "rn-vertical-slider": "^2.0.2"
+    "rn-vertical-slider": "^2.0.2",
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
