--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "expo-app-loading": "~1.3.0",
     "expo-av": "~10.2.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-location": "~14.0.1",
     "expo-media-library": "~14.0.0",
     "expo-status-bar": "~1.2.0",
     "moment": "^2.29.3",
+    "node-fetch": "^2.6.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -35,8 +37,7 @@
     "recyclerlistview": "^3.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "rn-vertical-slider": "^2.0.2",
-    "expo-image-picker": "~12.0.1"
+    "rn-vertical-slider": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
