--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "recyclerlistview": "^3.0.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "rn-vertical-slider": "^2.0.2"
+    "rn-vertical-slider": "^2.0.2",
+    "expo-notifications": "~0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
